<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hoteles Cubanacan</string>
    <string name="content_desc_splash">Imagen principal de la presentación de la aplicación</string>
    <string name="destino">Destino:</string>
    <string name="hoteles">Hoteles:</string>
    <string name="in">Entrada</string>
    <string name="lorem_date">01/01/1900</string>
    <string name="out">Salida</string>
    <string name="empty"/>
    <string name="rooms">No. Habitaciones</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="lorem_number">1</string>
    <string name="ninnos">Niños</string>
    <string name="adults">Adultos</string>
    <string name="more_options">Más opciones</string>
    <string name="search">Buscar</string>

    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="no_data">No hay datos disponibles</string>
    <string name="hoteles_title">Hoteles</string>
    <string name="details_title">Detalles</string>
    <string name="pick_room">Elegir habitación</string>
    <string name="to_pay">Total a pagar:</string>
    <string name="room_lorem">Habitación</string>
    <string name="lorem_opcion">Opcion</string>
    <string name="pick_room_title">Elegir habitación</string>
    <string name="title_in">Entrada:</string>
    <string name="title_out">Salida:</string>
    <string name="title_importe">Importe:</string>
    <string name="lorem_money">$$$$</string>
    <string name="title_lorem_habitacion">Habitación 1</string>
    <string name="hab_a_nombre_de">Habitación a nombre de:</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
    <string name="pais">País:</string>
    <string name="fumador_title">Fumador</string>
    <string name="next">Siguiente</string>
    <string name="reservar_action">Reservar</string>
    <string name="pagar">Pagar</string>
    <string name="acepto_terms">Acepto los términos y condiciones</string>
    <string name="titular_title">Titular de la reserva</string>
    <string name="correo_hint">Correo</string>
    <string name="lorem_one">1</string>
    <string name="lorem_two">2</string>
    <string name="precio">Precio</string>
    <string name="nombre">Nombre</string>
    <string name="categoria">Categoría</string>
    <string name="confirm_reserva_title">Confirmar reserva</string>
    <string name="lorem_hotel_nombre">Hotel Sevilla</string>
    <string name="direccion_lorem">19 e/ 42 y 44 #4210</string>
    <string name="must_reservar_msg">Debe reservar al menos una habitación</string>
    <string name="only_reservar_msg">Solo puede reservar hasta 5 habitaciones</string>
    <string name="age_one">Edad niño 1</string>
    <string name="age_two">Edad niño 2</string>
    <string name="age_three">Edad niño 3</string>
    <string name="dist_airport_label">Distancia al aeropuerto:</string>
    <string name="dist_airport">18 Km</string>
    <string name="user_name">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="entrar">Entrar</string>
    <string name="opcionales">Opcionales</string>
    <string name="registrarse">Registrarse</string>
    <string name="go_to_map">Ir al mapa</string>
    <string name="services_activities">Servicios y actividades</string>
    <string name="motives">Motivos</string>
    <string name="destinos_title">Destinos</string>
    <string name="detalles_title">Detalles</string>
    <string name="accept">Aceptar</string>
    <string name="registrarse_title">Registrarse</string>
    <string name="user_profile_title">Perfil de usuario</string>
    <string name="nombre_title">Nombres</string>
    <string name="apellido_title">Apellidos</string>
    <string name="idioma_title">Idioma</string>
    <string name="pais_title">País</string>
    <string name="direccion_title">Dirección</string>
    <string name="correo_title">Correo</string>
    <string name="repita_correo_title">Repita el correo</string>
    <string name="contrasena_title">Contraseña</string>
    <string name="confirmar_contrasena_title">Confirmar contraseña</string>
    <string name="pay">Pagar</string>
    <string name="cancelar">Cancelar</string>
    <string name="habitaciones_title">Habitaciones:</string>
    <string name="precio_title">Precio:</string>
    <string name="noches_title">Noches:</string>
    <string name="edit">Editar</string>
    <string name="lorem_email">jalejandro.hperez@gmail.com</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="content_error">Ha ocurrido un error</string>
    <string name="report">Reportar</string>
    <string name="wait_title">Espere</string>
    <string name="wait_content">Debe esperar un momento</string>
    <string name="lorem_dia">jue</string>
    <string name="lorem_dia_mes">28</string>
    <string name="lorem_anno">2016</string>
    <string name="lorem_mes">abr</string>
    <string name="mas_opciones">Más opciones</string>
    <string name="buscar_title">Buscar</string>
    <string name="destinos_hoteles_title">Destinos / Hoteles</string>
    <string name="bottom_text_buscar">Reserve con nosotros blah blah blah</string>
    <string name="see_more">ver más</string>
</resources>