<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/svLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip">
        <!-- idioma -->
        <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/idioma_title"/>
        <Spinner
                android:id="@+id/spinLanguage"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:textColor="@android:color/black"/>
        <!-- pais -->
        <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/pais_title"/>
        <Spinner
                android:id="@+id/spinPais"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:textColor="@android:color/black"/>
        <!-- direccion -->
        <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/direccion_title"/>
        <TextView
                android:id="@+id/tvDireccion"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/direccion_lorem"/>
        <!-- correo -->
        <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/correo_title"/>
        <TextView
                android:id="@+id/tvCorreo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/lorem_email"/>
        <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_button"
                android:text="@string/edit"/>
    </LinearLayout>
</ScrollView>