<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvLoremOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/custom_card_elevation"
        android:layout_margin="@dimen/card_margin"
        android:padding="10dp"
        android:foreground="@drawable/card_item_selector">
    <RelativeLayout
            android:id="@+id/rlLoremOne"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:id="@+id/rlTexts"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
            <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/card_title_text_padding"
                    android:paddingLeft="@dimen/card_title_text_padding"
                    android:paddingRight="@dimen/card_title_text_padding"
                    android:paddingBottom="@dimen/card_title_text_padding_bottom"
                    android:text="Hotel Sevilla"
                    android:textSize="@dimen/title_size"
                    android:textColor="@color/black_button"/>
            <!-- cantidad de habitaciones -->
            <TextView
                    android:id="@+id/tvHabTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/habitaciones_title"
                    android:paddingTop="@dimen/card_title_text_padding"
                    android:paddingBottom="@dimen/card_title_text_padding"
                    android:paddingLeft="@dimen/card_title_text_padding"
                    android:layout_below="@id/tvTitle"
                    android:singleLine="true"/>
            <TextView
                    android:id="@+id/rbCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/lorem_one"
                    android:padding="@dimen/card_title_text_padding"
                    android:layout_below="@id/tvTitle"
                    android:layout_toRightOf="@id/tvHabTitle"
                    android:layout_toEndOf="@id/tvHabTitle"
                    android:singleLine="true"/>

            <!-- precio -->
            <TextView
                    android:id="@+id/tvPrecioCant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/lorem_money"
                    android:padding="@dimen/card_title_text_padding"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tvTitle"
                    android:singleLine="true"/>
            <TextView
                    android:id="@+id/tvPrecioTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/precio_title"
                    android:paddingTop="@dimen/card_title_text_padding"
                    android:paddingBottom="@dimen/card_title_text_padding"
                    android:paddingLeft="@dimen/card_title_text_padding"
                    android:layout_toLeftOf="@id/tvPrecioCant"
                    android:layout_toStartOf="@id/tvPrecioCant"
                    android:layout_below="@id/tvTitle"
                    android:singleLine="true"/>

            <!-- noches -->
            <TextView
                    android:id="@+id/tvNochesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/noches_title"
                    android:paddingTop="@dimen/card_title_text_padding"
                    android:paddingBottom="@dimen/card_title_text_padding"
                    android:paddingLeft="@dimen/card_title_text_padding"
                    android:layout_below="@id/tvHabTitle"
                    android:singleLine="true"/>
            <TextView
                    android:id="@+id/tvNochesCant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/description_size"
                    android:text="@string/lorem_one"
                    android:padding="@dimen/card_title_text_padding"
                    android:layout_below="@id/tvHabTitle"
                    android:layout_toRightOf="@id/tvNochesTitle"
                    android:layout_toEndOf="@id/tvNochesTitle"
                    android:singleLine="true"/>

            <RelativeLayout
                    android:id="@+id/rlDate"
                    android:layout_below="@id/tvNochesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvEntradaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_in"
                        android:textSize="@dimen/description_size"
                        android:textColor="@android:color/black"
                        android:padding="10dp"/>
                <TextView
                        android:id="@+id/tvEntrada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_date"
                        android:textSize="@dimen/description_size"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_toRightOf="@+id/tvEntradaLabel"
                        android:layout_toEndOf="@+id/tvEntradaLabel"/>
                <TextView
                        android:id="@+id/tvSalidaLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_out"
                        android:textSize="@dimen/description_size"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_below="@+id/tvEntrada"/>
                <TextView
                        android:id="@+id/tvSalida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_date"
                        android:textSize="@dimen/description_size"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        android:layout_below="@+id/tvEntrada"
                        android:layout_toRightOf="@+id/tvEntradaLabel"
                        android:layout_toEndOf="@+id/tvEntradaLabel"/>
            </RelativeLayout>

            <!-- buttons -->
            <LinearLayout
                    android:layout_below="@id/rlDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnPagar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay"
                        android:textColor="@android:color/white"
                        android:background="@drawable/background_button"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_weight="1"/>
                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:textColor="@android:color/white"
                        android:background="@drawable/background_button"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>