<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_color_blue">
    <android.support.v7.widget.Toolbar
            android:id="@+id/screen_default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:minHeight="?attr/actionBarSize"
            tools:context=".ToolBar">
        <TextView
                android:id="@+id/tvToolBar"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
            android:id="@+id/svLogin"
            android:layout_below="@id/screen_default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="20dip"
                android:paddingBottom="13dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip">
            <!-- nombre -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/nombre_title"/>
            <EditText
                    android:id="@+id/etNombre"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:textColor="@android:color/black"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"/>
            <TextView
                    android:id="@+id/username_fixed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="2dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <!-- apellido -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="2dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/apellido_title"/>
            <EditText
                    android:id="@+id/etApellido"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:textColor="@android:color/black"/>
            <!-- idioma -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/idioma_title"/>
            <Spinner
                    android:id="@+id/spinLanguage"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:textColor="@android:color/black"/>
            <!-- pais -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/pais_title"/>
            <Spinner
                    android:id="@+id/spinPais"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:textColor="@android:color/black"/>
            <!-- direccion -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/direccion_title"/>
            <EditText
                    android:id="@+id/etDireccion"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:textColor="@android:color/black"/>
            <!-- correo -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/correo_title"/>
            <EditText
                    android:id="@+id/etCorreo"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:textColor="@android:color/black"
                    android:inputType="textEmailAddress"/>
            <!-- repetir correo -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/repita_correo_title"/>
            <EditText
                    android:id="@+id/etRepetirCorreo"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:textColor="@android:color/black"
                    android:inputType="textEmailAddress"/>
            <!-- contraseña -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/contrasena_title"/>
            <EditText
                    android:id="@+id/etContrasena"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:capitalize="none"
                    android:autoText="false"
                    android:password="true"
                    android:textColor="@android:color/black"
                    android:inputType="textPassword"/>
            <!-- repetir correo -->
            <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:singleLine="true"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/confirmar_contrasena_title"/>
            <EditText
                    android:id="@+id/etRepetirContrasena"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:scrollHorizontally="true"
                    android:textColor="@android:color/black"
                    android:capitalize="none"
                    android:autoText="false"
                    android:password="true"
                    android:inputType="textPassword"/>
            <Button
                    android:id="@+id/accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_button"
                    android:text="@string/accept"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>