<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">
    <android.support.v7.widget.Toolbar
            android:id="@+id/screen_default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cubanacan_light_blue"
            android:minHeight="?attr/actionBarSize"
            tools:context=".ToolBar">
        <TextView
                android:id="@+id/tvToolBar"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cvAPagar"
            android:layout_below="@id/screen_default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <RelativeLayout
                android:id="@+id/rlAPagar"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">
            <TextView
                    android:id="@+id/tvAPagarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:text="@string/to_pay"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/tvAPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_number"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:layout_toEndOf="@id/tvAPagarTitle"
                    android:layout_toRightOf="@id/tvAPagarTitle"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:id="@+id/cvRooms"
            android:layout_below="@+id/cvAPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <LinearLayout
                android:id="@+id/llRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservar_action"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:gravity="center"
            android:layout_below="@+id/cvRooms"/>
</RelativeLayout>